sample-api/rolling-update-no-istio/sample-api-svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: sample-api-svc
  namespace: api
spec:
  selector:
    app: sample-api
  
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: http
